syntax = "proto3";

package githubridge;

option go_package = "github.com/brotherlogic/githubridge/proto";

message Issue {
    int32 id = 1;
    string title = 2;
    string body = 3;
}

message CreateIssueRequest {
    string user = 1;
    string repo = 2;
    string title = 3;
    string body = 4;
}

message CreateIssueResponse {
    Issue issue = 1;
}

message GetIssueRequest {
    string user = 1;
    string repo = 2;
    int32 id = 3;
}

message GetIssueResponse {}

message CloseIssueRequest {
    string user = 1;
    string repo = 2;
    int32 id = 3;
}

message CloseIssueResponse {}

message CommentOnIssueRequest {
    string user = 1;
    string repo = 2;
    int32 id = 3;
    string comment = 4;
}

service Githubridge {
    rpc CreateIssue(CreateIssueRequest) returns (CreateIssueResponse);
    rpc GetIssue(GetIssueRequest) returns (GetIssueResponse);
    rpc CloseIssue(CloseIssueRequest) returns (CloseIssueResponse);
    rpc CommentOnIssue(CommentOnIssueRequest) returns (CommentOnIssueResponse)
}